--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,4 @@ jobs:
           loaders: fabric
           release_type: release
           featured: true
-          project_id: 
+          project_id: RzEj6TVj
