--- a/overrides/config/camerautils/camerautils.properties
+++ b/overrides/config/camerautils/camerautils.properties
@@ -4,8 +4,8 @@ max_smoothness=100.0
 cinematic_camera_modifier=1.0
 zoom=0.4000000000000002
 zoom_sensitivity=0.01
-third_person_zoom=4.7
-third_person_zoom_sensitivity=0.1
+third_person_offset=0.0
+third_person_offset_sensitivity=0.1
 third_person_cam_1_offset_x=-20.0
 third_person_cam_1_offset_y=25.0
 third_person_cam_1_offset_z=0.0
